# CineLog

./: .env  .env.example  .gitignore  ARCHITECTURE.md  Makefile  REFACTORING_SUMMARY.md  docker-compose.yml  pyproject.toml
app/: business_logic.py  db.py  main.py  models.py  schemas.py  utils.py
app/data/: __init__.py
app/data/edit/: __init__.py  friendships.py  lists.py  movies.py  swipes.py  users.py
app/data/read/: __init__.py  lists.py  movies.py  users.py
cinelog_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
database/: schema.sql
external_services/: tmdb.py
